@@ -101,10 +101,8 @@ public abstract class BaseManyToManyShortestPathsTest
         graph.addVertex(2);
 
         ManyToManyShortestPathsAlgorithm.ManyToManyShortestPaths<Integer,
-            DefaultWeightedEdge> shortestPaths = getAlgorithm(graph)
-                .getManyToManyPaths(
-                    new HashSet<>(Collections.singletonList(1)),
-                    new HashSet<>(Collections.singletonList(2)));
+            DefaultWeightedEdge> shortestPaths =
+                getAlgorithm(graph).getManyToManyPaths(Set.of(1), Set.of(2));
 
         assertEquals(Double.POSITIVE_INFINITY, shortestPaths.getWeight(1, 2), 1e-9);
         assertNull(shortestPaths.getPath(1, 2));
@@ -120,9 +118,8 @@ public abstract class BaseManyToManyShortestPathsTest
             getAlgorithm(getSimpleGraph());
 
         ManyToManyShortestPathsAlgorithm.ManyToManyShortestPaths<Integer,
-            DefaultWeightedEdge> shortestPaths = algorithm
-                .getManyToManyPaths(
-                    new HashSet<>(Arrays.asList(4, 1, 2)), new HashSet<>(Arrays.asList(8, 9, 6)));
+            DefaultWeightedEdge> shortestPaths =
+                algorithm.getManyToManyPaths(Set.of(4, 1, 2), Set.of(8, 9, 6));
 
         assertEquals(2.0, shortestPaths.getWeight(4, 8), 1e-9);
         assertEquals(Arrays.asList(4, 5, 8), shortestPaths.getPath(4, 8).getVertexList());
@@ -162,9 +159,8 @@ public abstract class BaseManyToManyShortestPathsTest
             getAlgorithm(getMultigraph());
 
         ManyToManyShortestPathsAlgorithm.ManyToManyShortestPaths<Integer,
-            DefaultWeightedEdge> shortestPaths = algorithm
-                .getManyToManyPaths(
-                    new HashSet<>(Arrays.asList(1, 4)), new HashSet<>(Arrays.asList(2, 5)));
+            DefaultWeightedEdge> shortestPaths =
+                algorithm.getManyToManyPaths(Set.of(1, 4), Set.of(2, 5));
 
         assertEquals(1.0, shortestPaths.getWeight(1, 2), 1e-9);
         assertEquals(Arrays.asList(1, 2), shortestPaths.getPath(1, 2).getVertexList());
@@ -190,9 +186,8 @@ public abstract class BaseManyToManyShortestPathsTest
             getAlgorithm(getSimpleGraph());
 
         ManyToManyShortestPathsAlgorithm.ManyToManyShortestPaths<Integer,
-            DefaultWeightedEdge> shortestPaths = algorithm
-                .getManyToManyPaths(
-                    new HashSet<>(Arrays.asList(1, 5, 9)), new HashSet<>(Arrays.asList(1, 5, 9)));
+            DefaultWeightedEdge> shortestPaths =
+                algorithm.getManyToManyPaths(Set.of(1, 5, 9), Set.of(1, 5, 9));
 
         assertEquals(0.0, shortestPaths.getWeight(1, 1), 1e-9);
         assertEquals(Collections.singletonList(1), shortestPaths.getPath(1, 1).getVertexList());
@@ -229,9 +224,8 @@ public abstract class BaseManyToManyShortestPathsTest
             getAlgorithm(getMultigraph());
 
         ManyToManyShortestPathsAlgorithm.ManyToManyShortestPaths<Integer,
-            DefaultWeightedEdge> shortestPaths = algorithm
-                .getManyToManyPaths(
-                    new HashSet<>(Arrays.asList(2, 4, 6)), new HashSet<>(Arrays.asList(2, 4, 6)));
+            DefaultWeightedEdge> shortestPaths =
+                algorithm.getManyToManyPaths(Set.of(2, 4, 6), Set.of(2, 4, 6));
 
         assertEquals(0.0, shortestPaths.getWeight(2, 2), 1e-9);
         assertEquals(Collections.singletonList(2), shortestPaths.getPath(2, 2).getVertexList());
