@@ -94,15 +94,9 @@ public class AhujaOrlinSharmaCapacitatedMinimumSpanningTreeTest
         assertTrue(cmst.isCapacitatedSpanningTree(graph, 0, 2.0, weights));
         assertEquals(6.0, cmst.getWeight(), 0.0000001);
 
-        assertEquals(
-            Pair.of(new HashSet<>(Arrays.asList(1, 5)), 2.0),
-            cmst.getPartition().get(cmst.getLabels().get(1)));
-        assertEquals(
-            Pair.of(new HashSet<>(Arrays.asList(2, 4)), 2.0),
-            cmst.getPartition().get(cmst.getLabels().get(2)));
-        assertEquals(
-            Pair.of(new HashSet<>(Arrays.asList(3, 6)), 2.0),
-            cmst.getPartition().get(cmst.getLabels().get(3)));
+        assertEquals(Pair.of(Set.of(1, 5), 2.0), cmst.getPartition().get(cmst.getLabels().get(1)));
+        assertEquals(Pair.of(Set.of(2, 4), 2.0), cmst.getPartition().get(cmst.getLabels().get(2)));
+        assertEquals(Pair.of(Set.of(3, 6), 2.0), cmst.getPartition().get(cmst.getLabels().get(3)));
 
         assertEquals(cmst.getLabels().get(1), cmst.getLabels().get(5), 0);
         assertEquals(cmst.getLabels().get(2), cmst.getLabels().get(4), 0);
@@ -168,15 +162,9 @@ public class AhujaOrlinSharmaCapacitatedMinimumSpanningTreeTest
         assertTrue(cmst.isCapacitatedSpanningTree(graph, 0, 4.0, weights));
         assertEquals(14.0, cmst.getWeight(), 0.0000001);
 
-        assertEquals(
-            cmst.getPartition().get(cmst.getLabels().get(1)),
-            Pair.of(new HashSet<>(Arrays.asList(1, 5)), 4.0));
-        assertEquals(
-            cmst.getPartition().get(cmst.getLabels().get(2)),
-            Pair.of(new HashSet<>(Arrays.asList(2, 3)), 3.0));
-        assertEquals(
-            cmst.getPartition().get(cmst.getLabels().get(4)),
-            Pair.of(new HashSet<>(Collections.singletonList(4)), 3.0));
+        assertEquals(cmst.getPartition().get(cmst.getLabels().get(1)), Pair.of(Set.of(1, 5), 4.0));
+        assertEquals(cmst.getPartition().get(cmst.getLabels().get(2)), Pair.of(Set.of(2, 3), 3.0));
+        assertEquals(cmst.getPartition().get(cmst.getLabels().get(4)), Pair.of(Set.of(4), 3.0));
 
         assertEquals(cmst.getLabels().get(1), cmst.getLabels().get(5), 0);
         assertEquals(cmst.getLabels().get(2), cmst.getLabels().get(3), 0);
@@ -228,10 +216,10 @@ public class AhujaOrlinSharmaCapacitatedMinimumSpanningTreeTest
         labels.put(5, 1);
 
         Map<Integer, Pair<Set<Integer>, Double>> partition = new HashMap<>();
-        partition.put(0, Pair.of(new HashSet<>(Collections.singletonList(1)), 1.0));
+        partition.put(0, Pair.of(new HashSet<>(Arrays.asList(1)), 1.0));
         partition.put(1, Pair.of(new HashSet<>(Arrays.asList(2, 5)), 2.0));
-        partition.put(2, Pair.of(new HashSet<>(Collections.singletonList(3)), 1.0));
-        partition.put(3, Pair.of(new HashSet<>(Collections.singletonList(4)), 2.0));
+        partition.put(2, Pair.of(new HashSet<>(Arrays.asList(3)), 1.0));
+        partition.put(3, Pair.of(new HashSet<>(Arrays.asList(4)), 2.0));
 
         Set<DefaultWeightedEdge> edges = new HashSet<>();
         edges.add(graph.getEdge(0, 1));
@@ -254,18 +242,10 @@ public class AhujaOrlinSharmaCapacitatedMinimumSpanningTreeTest
         assertTrue(cmst.isCapacitatedSpanningTree(graph, 0, 2.0, weights));
         assertEquals(5.0, cmst.getWeight(), 0.0000001);
 
-        assertEquals(
-            Pair.of(new HashSet<>(Arrays.asList(1, 5)), 2.0),
-            cmst.getPartition().get(cmst.getLabels().get(1)));
-        assertEquals(
-            Pair.of(new HashSet<>(Collections.singletonList(2)), 1.0),
-            cmst.getPartition().get(cmst.getLabels().get(2)));
-        assertEquals(
-            Pair.of(new HashSet<>(Collections.singletonList(3)), 1.0),
-            cmst.getPartition().get(cmst.getLabels().get(3)));
-        assertEquals(
-            Pair.of(new HashSet<>(Collections.singletonList(4)), 2.0),
-            cmst.getPartition().get(cmst.getLabels().get(4)));
+        assertEquals(Pair.of(Set.of(1, 5), 2.0), cmst.getPartition().get(cmst.getLabels().get(1)));
+        assertEquals(Pair.of(Set.of(2), 1.0), cmst.getPartition().get(cmst.getLabels().get(2)));
+        assertEquals(Pair.of(Set.of(3), 1.0), cmst.getPartition().get(cmst.getLabels().get(3)));
+        assertEquals(Pair.of(Set.of(4), 2.0), cmst.getPartition().get(cmst.getLabels().get(4)));
 
         assertEquals(cmst.getLabels().get(1), cmst.getLabels().get(5), 0);
         assertNotEquals(cmst.getLabels().get(1), cmst.getLabels().get(2));
@@ -348,14 +328,9 @@ public class AhujaOrlinSharmaCapacitatedMinimumSpanningTreeTest
         assertEquals(7.0, cmst.getWeight(), 0.0000001);
 
         assertEquals(
-            Pair.of(new HashSet<>(Arrays.asList(1, 4, 7)), 3.0),
-            cmst.getPartition().get(cmst.getLabels().get(1)));
-        assertEquals(
-            Pair.of(new HashSet<>(Arrays.asList(2, 5)), 2.0),
-            cmst.getPartition().get(cmst.getLabels().get(2)));
-        assertEquals(
-            Pair.of(new HashSet<>(Arrays.asList(3, 6)), 2.0),
-            cmst.getPartition().get(cmst.getLabels().get(3)));
+            Pair.of(Set.of(1, 4, 7), 3.0), cmst.getPartition().get(cmst.getLabels().get(1)));
+        assertEquals(Pair.of(Set.of(2, 5), 2.0), cmst.getPartition().get(cmst.getLabels().get(2)));
+        assertEquals(Pair.of(Set.of(3, 6), 2.0), cmst.getPartition().get(cmst.getLabels().get(3)));
 
         assertEquals(cmst.getLabels().get(1), cmst.getLabels().get(4), 0);
         assertEquals(cmst.getLabels().get(1), cmst.getLabels().get(7), 0);
@@ -450,14 +425,9 @@ public class AhujaOrlinSharmaCapacitatedMinimumSpanningTreeTest
         assertEquals(8.0, cmst.getWeight(), 0.0000001);
 
         assertEquals(
-            Pair.of(new HashSet<>(Arrays.asList(1, 4, 7, 8)), 4.0),
-            cmst.getPartition().get(cmst.getLabels().get(1)));
-        assertEquals(
-            Pair.of(new HashSet<>(Arrays.asList(2, 5)), 2.0),
-            cmst.getPartition().get(cmst.getLabels().get(2)));
-        assertEquals(
-            Pair.of(new HashSet<>(Arrays.asList(3, 6)), 2.0),
-            cmst.getPartition().get(cmst.getLabels().get(3)));
+            Pair.of(Set.of(1, 4, 7, 8), 4.0), cmst.getPartition().get(cmst.getLabels().get(1)));
+        assertEquals(Pair.of(Set.of(2, 5), 2.0), cmst.getPartition().get(cmst.getLabels().get(2)));
+        assertEquals(Pair.of(Set.of(3, 6), 2.0), cmst.getPartition().get(cmst.getLabels().get(3)));
 
         assertEquals(cmst.getLabels().get(1), cmst.getLabels().get(4), 0);
         assertEquals(cmst.getLabels().get(1), cmst.getLabels().get(7), 0);
@@ -536,11 +506,11 @@ public class AhujaOrlinSharmaCapacitatedMinimumSpanningTreeTest
         labels.put(5, 4);
 
         Map<Integer, Pair<Set<Integer>, Double>> partition = new HashMap<>();
-        partition.put(0, Pair.of(new HashSet<>(Collections.singletonList(1)), 2.0));
-        partition.put(1, Pair.of(new HashSet<>(Collections.singletonList(2)), 1.0));
-        partition.put(2, Pair.of(new HashSet<>(Collections.singletonList(3)), 2.0));
-        partition.put(3, Pair.of(new HashSet<>(Collections.singletonList(4)), 3.0));
-        partition.put(4, Pair.of(new HashSet<>(Collections.singletonList(5)), 2.0));
+        partition.put(0, Pair.of(new HashSet<>(Arrays.asList(1)), 2.0));
+        partition.put(1, Pair.of(new HashSet<>(Arrays.asList(2)), 1.0));
+        partition.put(2, Pair.of(new HashSet<>(Arrays.asList(3)), 2.0));
+        partition.put(3, Pair.of(new HashSet<>(Arrays.asList(4)), 3.0));
+        partition.put(4, Pair.of(new HashSet<>(Arrays.asList(5)), 2.0));
 
         Set<DefaultWeightedEdge> edges = new HashSet<>();
         edges.add(graph.getEdge(0, 1));
@@ -563,15 +533,9 @@ public class AhujaOrlinSharmaCapacitatedMinimumSpanningTreeTest
         assertTrue(cmst.isCapacitatedSpanningTree(graph, 0, 4.0, weights));
         assertEquals(14.0, cmst.getWeight(), 0.0000001);
 
-        assertEquals(
-            cmst.getPartition().get(cmst.getLabels().get(1)),
-            Pair.of(new HashSet<>(Arrays.asList(1, 5)), 4.0));
-        assertEquals(
-            cmst.getPartition().get(cmst.getLabels().get(2)),
-            Pair.of(new HashSet<>(Arrays.asList(2, 3)), 3.0));
-        assertEquals(
-            cmst.getPartition().get(cmst.getLabels().get(4)),
-            Pair.of(new HashSet<>(Collections.singletonList(4)), 3.0));
+        assertEquals(cmst.getPartition().get(cmst.getLabels().get(1)), Pair.of(Set.of(1, 5), 4.0));
+        assertEquals(cmst.getPartition().get(cmst.getLabels().get(2)), Pair.of(Set.of(2, 3), 3.0));
+        assertEquals(cmst.getPartition().get(cmst.getLabels().get(4)), Pair.of(Set.of(4), 3.0));
 
         assertEquals(cmst.getLabels().get(1), cmst.getLabels().get(5), 0);
         assertEquals(cmst.getLabels().get(2), cmst.getLabels().get(3), 0);
