@@ -35,9 +35,8 @@ public class UnmodifiableUnionSetTest
     @Test
     public void test1()
     {
-        UnmodifiableUnionSet<Integer> union = new UnmodifiableUnionSet<>(
-            new HashSet<>(Arrays.asList(1, 2, 3, 4, 5)),
-            new HashSet<>(Arrays.asList(1, 2, 3, 4, 5)));
+        UnmodifiableUnionSet<Integer> union =
+            new UnmodifiableUnionSet<>(Set.of(1, 2, 3, 4, 5), Set.of(1, 2, 3, 4, 5));
         assertEquals(5, union.size());
         IntStream.rangeClosed(1, 5).forEach(x -> assertTrue(union.contains(x)));
         IntStream.rangeClosed(6, 15).forEach(x -> assertFalse(union.contains(x)));
@@ -47,8 +46,7 @@ public class UnmodifiableUnionSetTest
     public void test2()
     {
         UnmodifiableUnionSet<Integer> union = new UnmodifiableUnionSet<>(
-            new HashSet<>(Arrays.asList(1, 2, 3, 4, 5)),
-            new HashSet<>(Arrays.asList(6, 7, 8, 9, 10, 11, 12, 13, 14, 15)));
+            Set.of(1, 2, 3, 4, 5), Set.of(6, 7, 8, 9, 10, 11, 12, 13, 14, 15));
         assertEquals(15, union.size());
         IntStream.rangeClosed(1, 15).forEach(x -> assertTrue(union.contains(x)));
         IntStream.rangeClosed(16, 20).forEach(x -> assertFalse(union.contains(x)));
@@ -57,9 +55,8 @@ public class UnmodifiableUnionSetTest
     @Test
     public void test3()
     {
-        UnmodifiableUnionSet<Integer> union = new UnmodifiableUnionSet<>(
-            new HashSet<>(Arrays.asList(1, 2, 3, 4, 5)),
-            new HashSet<>(Arrays.asList(3, 4, 5, 6, 7, 8, 9, 10, 20)));
+        UnmodifiableUnionSet<Integer> union =
+            new UnmodifiableUnionSet<>(Set.of(1, 2, 3, 4, 5), Set.of(3, 4, 5, 6, 7, 8, 9, 10, 20));
         assertEquals(11, union.size());
         IntStream.rangeClosed(1, 10).forEach(x -> assertTrue(union.contains(x)));
         IntStream.rangeClosed(11, 19).forEach(x -> assertFalse(union.contains(x)));
@@ -69,8 +66,8 @@ public class UnmodifiableUnionSetTest
     @Test
     public void test4()
     {
-        UnmodifiableUnionSet<Integer> union = new UnmodifiableUnionSet<>(
-            new HashSet<>(), new HashSet<>(Arrays.asList(1, 2, 3, 4, 5)));
+        UnmodifiableUnionSet<Integer> union =
+            new UnmodifiableUnionSet<>(new HashSet<>(), Set.of(1, 2, 3, 4, 5));
         assertEquals(5, union.size());
         IntStream.rangeClosed(1, 5).forEach(x -> assertTrue(union.contains(x)));
         IntStream.of(6).forEach(x -> assertFalse(union.contains(x)));
@@ -89,8 +86,7 @@ public class UnmodifiableUnionSetTest
     public void testIteratorDisjoint()
     {
         UnmodifiableUnionSet<Integer> union = new UnmodifiableUnionSet<>(
-            new HashSet<>(Arrays.asList(1, 2, 3, 4, 5)),
-            new HashSet<>(Arrays.asList(6, 7, 8, 9, 10, 11, 12, 13, 14, 15)));
+            Set.of(1, 2, 3, 4, 5), Set.of(6, 7, 8, 9, 10, 11, 12, 13, 14, 15));
         assertEquals(15, union.size());
 
         List<Integer> collectedElementsAsList = StreamSupport
@@ -108,9 +104,8 @@ public class UnmodifiableUnionSetTest
     @Test
     public void testIteratorCommonElements()
     {
-        UnmodifiableUnionSet<Integer> union = new UnmodifiableUnionSet<>(
-            new HashSet<>(Arrays.asList(1, 2, 3, 4, 5)),
-            new HashSet<>(Arrays.asList(3, 4, 5, 6, 7, 8, 9, 10)));
+        UnmodifiableUnionSet<Integer> union =
+            new UnmodifiableUnionSet<>(Set.of(1, 2, 3, 4, 5), Set.of(3, 4, 5, 6, 7, 8, 9, 10));
         assertEquals(10, union.size());
 
         List<Integer> collectedElementsAsList = StreamSupport
@@ -133,9 +128,9 @@ public class UnmodifiableUnionSetTest
         // underlying sets, and that size/iterator calls are optimized
         // based on the relative sizes of the underlying sets
 
-        Set<Integer> smallerHash = new HashSet<>(Arrays.asList(1, 2, 3, 4, 5));
+        Set<Integer> smallerHash = Set.of(1, 2, 3, 4, 5);
         ProfilingSet<Integer> smaller = new ProfilingSet<>(smallerHash);
-        Set<Integer> biggerHash = new HashSet<>(Arrays.asList(3, 4, 5, 6, 7, 8, 9, 10));
+        Set<Integer> biggerHash = Set.of(3, 4, 5, 6, 7, 8, 9, 10);
         ProfilingSet<Integer> bigger = new ProfilingSet<>(biggerHash);
 
         UnmodifiableUnionSet<Integer> union = new UnmodifiableUnionSet<>(smaller, bigger);
