@@ -81,11 +81,11 @@ public class ImmutableNetworkAdapterTest
         assertEquals(3, g.degreeOf("v4"));
         assertEquals(5, g.degreeOf("v5"));
 
-        assertEquals(new HashSet<>(Arrays.asList(e12)), g.edgesOf("v1"));
-        assertEquals(new HashSet<>(Arrays.asList(e12, e23_1, e23_2, e24, e52)), g.edgesOf("v2"));
-        assertEquals(new HashSet<>(Arrays.asList(e23_1, e23_2)), g.edgesOf("v3"));
-        assertEquals(new HashSet<>(Arrays.asList(e24, e44)), g.edgesOf("v4"));
-        assertEquals(new HashSet<>(Arrays.asList(e52, e55_1, e55_2)), g.edgesOf("v5"));
+        assertEquals(Set.of(e12), g.edgesOf("v1"));
+        assertEquals(Set.of(e12, e23_1, e23_2, e24, e52), g.edgesOf("v2"));
+        assertEquals(Set.of(e23_1, e23_2), g.edgesOf("v3"));
+        assertEquals(Set.of(e24, e44), g.edgesOf("v4"));
+        assertEquals(Set.of(e52, e55_1, e55_2), g.edgesOf("v5"));
 
         assertEquals(0, g.inDegreeOf("v1"));
         assertEquals(2, g.inDegreeOf("v2"));
@@ -93,11 +93,11 @@ public class ImmutableNetworkAdapterTest
         assertEquals(2, g.inDegreeOf("v4"));
         assertEquals(2, g.inDegreeOf("v5"));
 
-        assertEquals(new HashSet<>(), g.incomingEdgesOf("v1"));
-        assertEquals(new HashSet<>(Arrays.asList(e12, e52)), g.incomingEdgesOf("v2"));
-        assertEquals(new HashSet<>(Arrays.asList(e23_1, e23_2)), g.incomingEdgesOf("v3"));
-        assertEquals(new HashSet<>(Arrays.asList(e24, e44)), g.incomingEdgesOf("v4"));
-        assertEquals(new HashSet<>(Arrays.asList(e55_1, e55_2)), g.incomingEdgesOf("v5"));
+        assertEquals(Set.of(), g.incomingEdgesOf("v1"));
+        assertEquals(Set.of(e12, e52), g.incomingEdgesOf("v2"));
+        assertEquals(Set.of(e23_1, e23_2), g.incomingEdgesOf("v3"));
+        assertEquals(Set.of(e24, e44), g.incomingEdgesOf("v4"));
+        assertEquals(Set.of(e55_1, e55_2), g.incomingEdgesOf("v5"));
 
         assertEquals(1, g.outDegreeOf("v1"));
         assertEquals(3, g.outDegreeOf("v2"));
@@ -105,11 +105,11 @@ public class ImmutableNetworkAdapterTest
         assertEquals(1, g.outDegreeOf("v4"));
         assertEquals(3, g.outDegreeOf("v5"));
 
-        assertEquals(new HashSet<>(Arrays.asList(e12)), g.outgoingEdgesOf("v1"));
-        assertEquals(new HashSet<>(Arrays.asList(e23_1, e23_2, e24)), g.outgoingEdgesOf("v2"));
-        assertEquals(new HashSet<>(), g.outgoingEdgesOf("v3"));
-        assertEquals(new HashSet<>(Arrays.asList(e44)), g.outgoingEdgesOf("v4"));
-        assertEquals(new HashSet<>(Arrays.asList(e52, e55_1, e55_2)), g.outgoingEdgesOf("v5"));
+        assertEquals(Set.of(e12), g.outgoingEdgesOf("v1"));
+        assertEquals(Set.of(e23_1, e23_2, e24), g.outgoingEdgesOf("v2"));
+        assertEquals(Set.of(), g.outgoingEdgesOf("v3"));
+        assertEquals(Set.of(e44), g.outgoingEdgesOf("v4"));
+        assertEquals(Set.of(e52, e55_1, e55_2), g.outgoingEdgesOf("v5"));
 
         // test indeed immutable
         try {
