@@ -71,11 +71,11 @@ public class MutableGraphAdapterTest
         assertEquals(3, g.degreeOf("v4"));
         assertEquals(3, g.degreeOf("v5"));
 
-        assertEquals(new HashSet<>(Arrays.asList(e12)), g.edgesOf("v1"));
-        assertEquals(new HashSet<>(Arrays.asList(e12, e23, e24, e52)), g.edgesOf("v2"));
-        assertEquals(new HashSet<>(Arrays.asList(e23)), g.edgesOf("v3"));
-        assertEquals(new HashSet<>(Arrays.asList(e24, e44)), g.edgesOf("v4"));
-        assertEquals(new HashSet<>(Arrays.asList(e52, e55)), g.edgesOf("v5"));
+        assertEquals(Set.of(e12), g.edgesOf("v1"));
+        assertEquals(Set.of(e12, e23, e24, e52), g.edgesOf("v2"));
+        assertEquals(Set.of(e23), g.edgesOf("v3"));
+        assertEquals(Set.of(e24, e44), g.edgesOf("v4"));
+        assertEquals(Set.of(e52, e55), g.edgesOf("v5"));
 
         assertEquals(0, g.inDegreeOf("v1"));
         assertEquals(2, g.inDegreeOf("v2"));
@@ -83,11 +83,11 @@ public class MutableGraphAdapterTest
         assertEquals(2, g.inDegreeOf("v4"));
         assertEquals(1, g.inDegreeOf("v5"));
 
-        assertEquals(new HashSet<>(), g.incomingEdgesOf("v1"));
-        assertEquals(new HashSet<>(Arrays.asList(e12, e52)), g.incomingEdgesOf("v2"));
-        assertEquals(new HashSet<>(Arrays.asList(e23)), g.incomingEdgesOf("v3"));
-        assertEquals(new HashSet<>(Arrays.asList(e24, e44)), g.incomingEdgesOf("v4"));
-        assertEquals(new HashSet<>(Arrays.asList(e55)), g.incomingEdgesOf("v5"));
+        assertEquals(Set.of(), g.incomingEdgesOf("v1"));
+        assertEquals(Set.of(e12, e52), g.incomingEdgesOf("v2"));
+        assertEquals(Set.of(e23), g.incomingEdgesOf("v3"));
+        assertEquals(Set.of(e24, e44), g.incomingEdgesOf("v4"));
+        assertEquals(Set.of(e55), g.incomingEdgesOf("v5"));
 
         assertEquals(1, g.outDegreeOf("v1"));
         assertEquals(2, g.outDegreeOf("v2"));
@@ -95,11 +95,11 @@ public class MutableGraphAdapterTest
         assertEquals(1, g.outDegreeOf("v4"));
         assertEquals(2, g.outDegreeOf("v5"));
 
-        assertEquals(new HashSet<>(Arrays.asList(e12)), g.outgoingEdgesOf("v1"));
-        assertEquals(new HashSet<>(Arrays.asList(e23, e24)), g.outgoingEdgesOf("v2"));
-        assertEquals(new HashSet<>(), g.outgoingEdgesOf("v3"));
-        assertEquals(new HashSet<>(Arrays.asList(e44)), g.outgoingEdgesOf("v4"));
-        assertEquals(new HashSet<>(Arrays.asList(e52, e55)), g.outgoingEdgesOf("v5"));
+        assertEquals(Set.of(e12), g.outgoingEdgesOf("v1"));
+        assertEquals(Set.of(e23, e24), g.outgoingEdgesOf("v2"));
+        assertEquals(Set.of(), g.outgoingEdgesOf("v3"));
+        assertEquals(Set.of(e44), g.outgoingEdgesOf("v4"));
+        assertEquals(Set.of(e52, e55), g.outgoingEdgesOf("v5"));
     }
 
     /**
@@ -136,11 +136,11 @@ public class MutableGraphAdapterTest
         assertEquals(3, g.degreeOf("v4"));
         assertEquals(3, g.degreeOf("v5"));
 
-        assertEquals(new HashSet<>(Arrays.asList(e12)), g.edgesOf("v1"));
-        assertEquals(new HashSet<>(Arrays.asList(e12, e23, e24, e52)), g.edgesOf("v2"));
-        assertEquals(new HashSet<>(Arrays.asList(e23)), g.edgesOf("v3"));
-        assertEquals(new HashSet<>(Arrays.asList(e24, e44)), g.edgesOf("v4"));
-        assertEquals(new HashSet<>(Arrays.asList(e52, e55)), g.edgesOf("v5"));
+        assertEquals(Set.of(e12), g.edgesOf("v1"));
+        assertEquals(Set.of(e12, e23, e24, e52), g.edgesOf("v2"));
+        assertEquals(Set.of(e23), g.edgesOf("v3"));
+        assertEquals(Set.of(e24, e44), g.edgesOf("v4"));
+        assertEquals(Set.of(e52, e55), g.edgesOf("v5"));
 
         assertEquals(1, g.inDegreeOf("v1"));
         assertEquals(4, g.inDegreeOf("v2"));
@@ -148,11 +148,11 @@ public class MutableGraphAdapterTest
         assertEquals(3, g.inDegreeOf("v4"));
         assertEquals(3, g.inDegreeOf("v5"));
 
-        assertEquals(new HashSet<>(Arrays.asList(e12)), g.incomingEdgesOf("v1"));
-        assertEquals(new HashSet<>(Arrays.asList(e12, e23, e24, e52)), g.incomingEdgesOf("v2"));
-        assertEquals(new HashSet<>(Arrays.asList(e23)), g.incomingEdgesOf("v3"));
-        assertEquals(new HashSet<>(Arrays.asList(e24, e44)), g.incomingEdgesOf("v4"));
-        assertEquals(new HashSet<>(Arrays.asList(e52, e55)), g.incomingEdgesOf("v5"));
+        assertEquals(Set.of(e12), g.incomingEdgesOf("v1"));
+        assertEquals(Set.of(e12, e23, e24, e52), g.incomingEdgesOf("v2"));
+        assertEquals(Set.of(e23), g.incomingEdgesOf("v3"));
+        assertEquals(Set.of(e24, e44), g.incomingEdgesOf("v4"));
+        assertEquals(Set.of(e52, e55), g.incomingEdgesOf("v5"));
 
         assertEquals(1, g.outDegreeOf("v1"));
         assertEquals(4, g.outDegreeOf("v2"));
@@ -160,11 +160,11 @@ public class MutableGraphAdapterTest
         assertEquals(3, g.outDegreeOf("v4"));
         assertEquals(3, g.outDegreeOf("v5"));
 
-        assertEquals(new HashSet<>(Arrays.asList(e12)), g.outgoingEdgesOf("v1"));
-        assertEquals(new HashSet<>(Arrays.asList(e12, e23, e24, e52)), g.outgoingEdgesOf("v2"));
-        assertEquals(new HashSet<>(Arrays.asList(e23)), g.outgoingEdgesOf("v3"));
-        assertEquals(new HashSet<>(Arrays.asList(e24, e44)), g.outgoingEdgesOf("v4"));
-        assertEquals(new HashSet<>(Arrays.asList(e52, e55)), g.outgoingEdgesOf("v5"));
+        assertEquals(Set.of(e12), g.outgoingEdgesOf("v1"));
+        assertEquals(Set.of(e12, e23, e24, e52), g.outgoingEdgesOf("v2"));
+        assertEquals(Set.of(e23), g.outgoingEdgesOf("v3"));
+        assertEquals(Set.of(e24, e44), g.outgoingEdgesOf("v4"));
+        assertEquals(Set.of(e52, e55), g.outgoingEdgesOf("v5"));
     }
 
     @Test
@@ -202,7 +202,7 @@ public class MutableGraphAdapterTest
         // @example:findVertexCover:begin
         VertexCoverAlgorithm<String> alg = new RecursiveExactVCImpl<>(jgrapht);
         VertexCoverAlgorithm.VertexCover<String> cover = alg.getVertexCover();
-        Set<String> expectedCover = new HashSet<String>(Arrays.asList("um", "ml", "mr", "lm"));
+        Set<String> expectedCover = Set.of("um", "ml", "mr", "lm");
         assertEquals(expectedCover, cover);
         // @example:findVertexCover:end
     }
